Add notification example

--- a/examples/notify-desktop.html
+++ b/examples/notify-desktop.html
@@ -2,8 +2,9 @@
 <html>
  <head>
   <meta charset="utf-8"/>
-  <title>Websocket test</title>
-  <script src="test.js"></script>
+  <title>Websocket notification example</title>
+  <script src="../node_modules/notifyjs/dist/notify.js"></script>
+  <script src="notify-desktop.js"></script>
  </head>
  <body>
      <h1>Client 42</h1>
