Add hint for testing notifications with google chrome

--- a/examples/notify-desktop.html
+++ b/examples/notify-desktop.html
@@ -9,6 +9,6 @@
  <body>
      <h1>Client 42</h1>
      <p><a href="http://localhost:8002/?client=42&payload=hi!" target="_blank">http://localhost:8002/?client=42&payload=hi!</a></p>
-     (see js console output)
+     (does not run via file:/// in Chrome)
  </body>
 </html>
