Towards shared workers, removing Service Worker example

--- a/examples/shared-worker.html
+++ b/examples/shared-worker.html
@@ -7,6 +7,6 @@
  </head>
  <body>
      <h1>Shared Worker for client 42</h1>
-     <p><a href="http://localhost:8002/?client=42&payload=hi!" target="_blank">notify across all open tabs</a></p>
+     <p><a href="http://localhost:8002/?client=42&payload=Hi!" target="_blank">notify across all open tabs</a></p>
  </body>
 </html>
